0.05
 - Add EXAMPLE5 section to doc.
 - Implement station order.
 - Rewrite XML map to new version with line IDs.
 - Rewrite XML map to new version without junctions.

0.04 2015-10-16T11:32:20+02:00
 - Add 3号线 line.
 - Add lines to XML document.
 - Improve description for get_lines() in doc.
 - Update to Map::Tube 3.06.

0.03 2015-10-05T17:10:41+02:00
 - Add EXAMPLE4 to doc.
 - Add get_line_by_id() and get_line_by_name() methods to doc.
 - Add tests for get_node_by_id() and get_node_by_name() methods.
 - Fix title in doc.
 - Move author tests to xt/ directory.
 - Rewrite SEE ALSO section to new style.
 - Update Module::Install to 1.16 version.

0.02 2015-03-12T21:20:54+01:00
 - Add <?xml> header to XML document.
 - Add Map::Tube::Graph to SEE ALSO section in doc.
 - Add Map::Tube::Plugin::Graph to SEE ALSO section in doc.
 - Add Map::Tube::Singapore to SEE ALSO section in doc.
 - Add test of map validity.
 - Update META.yml and README files.
 - Update copyright years to 2015.

0.01 2014-12-31T09:03:53+01:00
 - First version