@@ -3,6 +3,7 @@
  - Implement station order.
  - Rewrite XML map to new version with line IDs.
  - Rewrite XML map to new version without junctions.
+ - Update Module::Install to 1.18 version.
 
 0.04 2015-10-16T11:32:20+02:00
  - Add 3号线 line.
